--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "rss-scripts start",
     "build": "rss-scripts build",
     "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
-    "lint": "eslint ./src --fix"
+    "lint": "eslint ./src",
+    "lint:fix": "eslint ./src --fix"
   },
   "devDependencies": {
     "eslint": "^8.14.0",
